--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
-    "connect-mongo": "^5.0.0",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.4.3",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.4",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
